--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "mcp": "ts-node mcp-server.ts"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.25.2",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "recharts": "^3.6.0",
     "react-router-dom": "^7.12.0",
-    "lucide-react": "^0.562.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^3.4.0"
+    "recharts": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
